editor/tree-sitter-deutsch/test/corpus/ausdruecke.txt
==================
Vorrang: Potenz bindet staerker als unaeres Minus
==================

-2 ** 2

---

(quelldatei
  (ausdrucks_anweisung
    (unaere_operation
      operand: (binaere_operation links: (ganzzahl) rechts: (ganzzahl)))))

==================
Zeichenkette mit Interpolation und Formatangabe
==================

drucke("Pi = {pi:.2f} und {name}!")

---

(quelldatei
  (ausdrucks_anweisung
    (aufruf
      funktion: (bezeichner)
      argumente: (argumentliste
        (argument
          (zeichenkette
            (interpolation ausdruck: (bezeichner) format: (format_spezifizierer))
            (interpolation ausdruck: (bezeichner))))))))

==================
Schnitt und Index
==================

l[1:3]
l[::-1]
l[0]

---

(quelldatei
  (ausdrucks_anweisung (index_zugriff objekt: (bezeichner) index: (schnitt (ganzzahl) (ganzzahl))))
  (ausdrucks_anweisung (index_zugriff objekt: (bezeichner) index: (schnitt (unaere_operation operand: (ganzzahl)))))
  (ausdrucks_anweisung (index_zugriff objekt: (bezeichner) index: (ganzzahl))))

==================
Neu mit Namensraum
==================

neu modul.Punkt(x=1, y=2)

---

(quelldatei
  (ausdrucks_anweisung
    (neu_ausdruck
      klasse: (klassen_pfad (bezeichner) (bezeichner))
      argumente: (argumentliste
        (argument name: (bezeichner) wert: (ganzzahl))
        (argument name: (bezeichner) wert: (ganzzahl))))))

==================
Listen-Abstraktion mit Filter
==================

[x * 2 für x in bereich(10) wenn x % 2 == 0]

---

(quelldatei
  (ausdrucks_anweisung
    (listen_abstraktion
      ausdruck: (binaere_operation links: (bezeichner) rechts: (ganzzahl))
      variable: (bezeichner)
      iterable: (aufruf funktion: (bezeichner) argumente: (argumentliste (argument (ganzzahl))))
      bedingung: (binaere_operation
        links: (binaere_operation links: (bezeichner) rechts: (ganzzahl))
        rechts: (ganzzahl)))))
